--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="bottom-right">
           <p class="my-name">川口雄大</p>
-          <p>東京都在住。業務の効率化が得意なプログラマーです。<br>前社では会社のDX推進に携わり、100万円以上のコスト削減に貢献。</p>
+          <p>東京都在住。業務の効率化が得意なフリーランスエンジニアです。<br>前社では会社のDX推進に携わり、100万円以上のコスト削減に貢献。</p>
           <p>現在では、個人事業･中小企業様向け業務効率化支援、問題解決サポートなどを行っております。<br>これまで培ってきた技術と経験を活かして以下のことを提供しております。</p>
           <p class="work-contents">･Excelの自動作成<br>･PDF資料→Excelへの自動変換<br>･その他ヒアリングに応じた業務効率化ツールの作成</p>
           <p>など、それぞれの用途に応じた対応ができます<br>また、オンラインで行う業務の為柔軟な対応が可能です</p>
