--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <section id="first-block">
     <div class="container">
       <h1>時間に付加価値を。</h1>
-      <p>あなたの仕事、楽にします</p>
+      <p>あなたのルーティン業務、楽にします</p>
       <div class="navigation">
         <nav><a href="#first-block"><i class="fas fa-home"></i>Home</a></nav>
         <nav><a href="#second-block"><i class="fas fa-user"></i>Profile</a></nav>
