--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div><iframe width="560" height="315" src="https://www.youtube.com/embed/w7WZLNnQfkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
           <!-- <a href="https://ta120127.github.io/my_portfolio/"><img src="./images/my_portfolio3.jpg" href="#"></a> -->
           <h3>Excel操作の自動化</h3>
-          <p>Excelに書いてある内容を整理し<br>1クリックで新しいExcelの表を作成します。<br>こちらでは経済産業省10年分のデータを整理し、<br>表と推移グラフを生成しています。</p>
+          <p>Excelに書いてある内容を整理し<br>1クリックで新しいExcelの表を作成します。<br>こちらでは経済産業省10年分のデータを整理し、<br>表付きレポートを自動で作成しております。</p>
           <p>引用元：<a href="https://www.meti.go.jp">経済産業省</a></p>
         </div>
       </div>
